# PEA

./: CMakeLists.txt  README.md
include/: algorithm_parallel_three_stages.h  cplex_interface.h
instances/: AP_p-3_n-100_ins-1.lp  AP_p-3_n-100_ins-10.lp  AP_p-3_n-100_ins-2.lp  AP_p-3_n-100_ins-3.lp  AP_p-3_n-100_ins-4.lp  AP_p-3_n-100_ins-5.lp  AP_p-3_n-100_ins-6.lp  AP_p-3_n-100_ins-7.lp  AP_p-3_n-100_ins-8.lp  AP_p-3_n-100_ins-9.lp  AP_p-3_n-55_ins-1.lp  AP_p-3_n-55_ins-10.lp  AP_p-3_n-55_ins-2.lp  AP_p-3_n-55_ins-3.lp  AP_p-3_n-55_ins-4.lp  AP_p-3_n-55_ins-5.lp  AP_p-3_n-55_ins-6.lp  AP_p-3_n-55_ins-7.lp  AP_p-3_n-55_ins-8.lp  AP_p-3_n-55_ins-9.lp  AP_p-3_n-60_ins-1.lp  AP_p-3_n-60_ins-10.lp  AP_p-3_n-60_ins-2.lp  AP_p-3_n-60_ins-3.lp  AP_p-3_n-60_ins-4.lp  AP_p-3_n-60_ins-5.lp  AP_p-3_n-60_ins-6.lp  AP_p-3_n-60_ins-7.lp  AP_p-3_n-60_ins-8.lp  AP_p-3_n-60_ins-9.lp  AP_p-3_n-65_ins-1.lp  AP_p-3_n-65_ins-10.lp  AP_p-3_n-65_ins-2.lp  AP_p-3_n-65_ins-3.lp  AP_p-3_n-65_ins-4.lp  AP_p-3_n-65_ins-5.lp  AP_p-3_n-65_ins-6.lp  AP_p-3_n-65_ins-7.lp  AP_p-3_n-65_ins-8.lp  AP_p-3_n-65_ins-9.lp  (+60 more)
results/AIRA_AP/: AP_p-3_n-10_ins-1.lp_threads-1  AP_p-3_n-10_ins-1.lp_threads-2  AP_p-3_n-10_ins-1.lp_threads-4  AP_p-3_n-10_ins-1.lp_threads-6  AP_p-3_n-10_ins-10.lp_threads-1  AP_p-3_n-10_ins-10.lp_threads-2  AP_p-3_n-10_ins-10.lp_threads-4  AP_p-3_n-10_ins-10.lp_threads-6  AP_p-3_n-10_ins-2.lp_threads-1  AP_p-3_n-10_ins-2.lp_threads-2  AP_p-3_n-10_ins-2.lp_threads-4  AP_p-3_n-10_ins-2.lp_threads-6  AP_p-3_n-10_ins-3.lp_threads-1  AP_p-3_n-10_ins-3.lp_threads-2  AP_p-3_n-10_ins-3.lp_threads-4  AP_p-3_n-10_ins-3.lp_threads-6  AP_p-3_n-10_ins-4.lp_threads-1  AP_p-3_n-10_ins-4.lp_threads-2  AP_p-3_n-10_ins-4.lp_threads-4  AP_p-3_n-10_ins-4.lp_threads-6  AP_p-3_n-10_ins-5.lp_threads-1  AP_p-3_n-10_ins-5.lp_threads-2  AP_p-3_n-10_ins-5.lp_threads-4  (+315 more)
src/: algorithm_parallel_three_stages.cpp  cplex_interface.cpp  main.cpp
(+3090 files in other folders)
